rename to dots, add aliases, config sync

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -1,23 +1,42 @@
+[user]
+	name = Chris
+	email = <github_no_reply>
+	signingkey = <public_key>
+
+[oh-my-zsh]
+	prefix-regex = [^-]*-
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
-[user]
-	name = Chris
-	email = <github_no_reply>
-	signingkey = <public_key>
+
+[init]
+	defaultBranch = main
+
 [commit]
 	gpgSign = true
+
 [tag]
 	gpgSign = true
+
+[merge]
+	conflictstyle = zdiff3
+
+[pull]
+	rebase = false
+
+[color]
+	ui = true
+
 [alias]
-	st = "!git status -sb; git --no-pager diff origin/main --shortstat --no-prefix;"
+	st = status -sb
 	lg = log --graph --oneline --pretty=format:\"%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset\" --abbrev-commit
 	br = for-each-ref --count=10 --sort=-committerdate --format='%(color:red)%(objectname:short)%(color:reset) - %(color:white)%(if)%(*HEAD)%(then)%(color:yellow)%(refname:short)%(color:reset)%(else)%(refname:short)%(end)%(color:reset) (%(color:green)%(committerdate:relative)%(color:reset))' refs/heads
-[pull]
-	rebase = true
-[oh-my-zsh]
-	prefix-regex = [^-]*-
-[merge]
-	ff = false
+	df = !git --no-pager diff --shortstat --no-prefix
+	cm = !git add -A && git commit -m
+	amend = commit -a --amend
+	wipe = reset --hard
+	undo = reset HEAD~1 --mixed
+	cleanup = ! "git fetch -p && git for-each-ref --format '%(refname:short) %(upstream:track)' | awk '$2 == \"[gone]\" {print $1}' | xargs -r git branch -D"
