--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,5 +1,4 @@
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
 tap "homebrew/services"
 tap "kaplanelad/tap"
 tap "pirj/noclamshell"
@@ -19,6 +18,7 @@ brew "curl"
 brew "difftastic"
 brew "direnv"
 brew "docutils"
+brew "docuum"
 brew "flash"
 brew "freetds"
 brew "fzf"
@@ -30,7 +30,6 @@ brew "libfido2"
 brew "mas"
 brew "mycli"
 brew "mysql", restart_service: true
-brew "neofetch"
 brew "nmap"
 brew "node"
 brew "openapi-generator"
@@ -51,7 +50,8 @@ cask "alt-tab"
 cask "amazon-q"
 cask "android-studio"
 cask "cleanmymac"
-cask "devtoys"
+cask "coteditor"
+cask "devutils"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -60,8 +60,8 @@ cask "google-chrome"
 cask "heynote"
 cask "inkscape"
 cask "iterm2"
-cask "kicad"
 cask "microsoft-teams"
+cask "monitorcontrol"
 cask "nordvpn"
 cask "obs"
 cask "obsidian"
@@ -70,6 +70,7 @@ cask "scroll-reverser"
 cask "shottr"
 cask "slack"
 cask "spotify"
+cask "suspicious-package"
 cask "tableplus"
 cask "visual-studio-code"
 cask "vlc"
