--- a/config/vscode-settings.json
+++ b/config/vscode-settings.json
@@ -1,5 +1,3 @@
-// Signing in with GitHub (or alternatives) allows settings sync. This file is redundant (and most likely outdated) but may be helpful for new users.
-
 {
   // Editor Settings
   "[html]": {
@@ -27,6 +25,9 @@
   "[django-html]": {
     "editor.defaultFormatter": "monosans.djlint"
   },
+  "[cpp]": {
+    "editor.defaultFormatter": "ms-vscode.cpptools"
+  },
 
   // Editor Preferences
   "editor.accessibilitySupport": "off",
@@ -41,13 +42,18 @@
   "editor.renderWhitespace": "all",
   "editor.minimap.enabled": false,
   "editor.formatOnSave": true,
+  "window.commandCenter": false,
+  "window.title": "[${rootNameShort}] ${activeEditorMedium}",
 
   // Terminal Settings
   "terminal.integrated.env.osx": {
     "FIG_NEW_SESSION": "1",
-    "CW_NEW_SESSION": "1"
+    "CW_NEW_SESSION": "1",
+    "Q_NEW_SESSION": "1"
   },
   "terminal.integrated.defaultProfile.osx": "zsh",
+  "terminal.integrated.fontFamily": "MesloLGS NF", // OMZ Powerlevel10k Font
+  "terminal.integrated.tabs.enabled": true,
 
   // Git Settings
   "git.autofetch": true,
@@ -57,6 +63,7 @@
     "suppressGitMissingWarning": true
   },
   "git.ignoreRebaseWarning": true,
+  "git.enableSmartCommit": true,
 
   // Python Settings
   "python.analysis.diagnosticSeverityOverrides": {
@@ -64,9 +71,9 @@
   },
   "flake8.args": [
     "--max-line-length=120",
-    "--ignore=E122,E128,E201,E202,E261,E303,E402,E501,W291,W503,W605,E711,E712"
-    // E122: Missing indentation, E128: Mixed indentation (tabs and spaces), E201: Whitespace after '(', E202: Whitespace before ')', E261: Space before inline comment
-    // E303: Too many blank lines, E402: Module level import not at top, E501: Line too long, W291: Trailing whitespace, W503: Line break occurred before a binary operator
+    "--ignore=E122,E128,E201,E202,E203,E261,E303,F401,E402,E501,W291,W503,W605,E711,E712"
+    // E122: Missing indentation, E128: Mixed indentation (tabs and spaces), E201: Whitespace after '(', E202: Whitespace before ')', E203: Whitespace before ':', E261: Space before inline comment
+    // E303: Too many blank lines, F401: Imported but unused (duplicated by Pylance), E402: Module level import not at top, E501: Line too long, W291: Trailing whitespace, W503: Line break occurred before a binary operator
     // W605: Invalid escape sequence, E711: Comparison to False should be 'if cond is False', E712: Comparison to None should be 'if cond is not None:'
   ],
 
@@ -83,20 +90,17 @@
   "gitlens.views.repositories.showContributors": false,
   "gitlens.views.repositories.showWorktrees": false,
   "gitlens.views.repositories.showTags": false,
-
-  // VS Code Pets Settings
-  "vscode-pets.theme": "forest",
-  "vscode-pets.petSize": "small",
-  "vscode-pets.throwBallWithMouse": true,
+  "gitlens.views.repositories.files.layout": "tree",
 
   // Settings Sync
   "settingsSync.ignoredSettings": ["-python.interpreter.infoVisibility"],
   "settingsSync.ignoredExtensions": [],
 
   // Workbench Settings
-  "workbench.startupEditor": "newUntitledFile",
+  "workbench.startupEditor": "none",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.editor.empty.hint": "hidden",
+  "workbench.layoutControl.enabled": false,
 
   // VS Code Extensions Settings
   "extensions.ignoreRecommendations": true,
@@ -142,6 +146,7 @@
   ],
 
   // GitHub Pull Requests Settings
+  "githubPullRequests.createOnPublishBranch": "never",
   "githubPullRequests.assignCreated": "${user}",
   "githubPullRequests.pullBranch": "never",
   "githubPullRequests.queries": [
@@ -161,8 +166,8 @@
 
   // Miscellaneous Settings
   "update.showReleaseNotes": false,
-  "terminal.integrated.tabs.enabled": true,
   "outline.collapseItems": "alwaysCollapse",
   "redhat.telemetry.enabled": false,
-  "liveServer.settings.donotShowInfoMsg": true
+  "liveServer.settings.donotShowInfoMsg": true,
+  "arduino.useArduinoCli": true
 }
