--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -34,9 +34,10 @@
 	st = status -sb
 	lg = log --graph --oneline --pretty=format:\"%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset\" --abbrev-commit
 	br = for-each-ref --count=10 --sort=-committerdate --format='%(color:red)%(objectname:short)%(color:reset) - %(color:white)%(if)%(*HEAD)%(then)%(color:yellow)%(refname:short)%(color:reset)%(else)%(refname:short)%(end)%(color:reset) (%(color:green)%(committerdate:relative)%(color:reset))' refs/heads
-	df = !git --no-pager diff --shortstat --no-prefix
+	df = !git --no-pager diff --compact-summary --no-prefix
 	cm = !git add -A && git commit -m
 	amend = commit -a --amend
 	wipe = reset --hard
 	undo = reset HEAD~1 --mixed
 	cleanup = ! "git fetch -p && git for-each-ref --format '%(refname:short) %(upstream:track)' | awk '$2 == \"[gone]\" {print $1}' | xargs -r git branch -D"
+	sha = "!f() { SHA=$1; printf \"\\033[1;35mCommit Info\\033[0m\\n\"; git --no-pager show $SHA --name-status --pretty=format:\"%CgreenAuth:%Creset %an (%ae)%n%CgreenDate:%Creset %ad (%ar)%n%CgreenHash:%Creset %H (%h)%n%CgreenSubj:%Creset %s%n%n%CgreenFiles Changed:%Creset\"; printf \"\\n\\033[1;35mBranches Containing Commit\\033[0m\\n\"; git fetch -a && git --no-pager branch -a --contains $SHA; }; f"
