--- a/config/Brewfile
+++ b/config/Brewfile
@@ -6,30 +6,36 @@ tap "rfidresearchgroup/proxmark3"
 brew "act"
 brew "archey4"
 brew "atuin"
-brew "python@3.11"
-brew "awscli"
-brew "bat"
 brew "pycparser"
 brew "cffi"
+brew "cryptography"
+brew "python@3.11"
+brew "awscli"
+brew "libgit2@1.7"
+brew "bat"
 brew "click"
 brew "cmake"
-brew "cryptography"
+brew "coreutils"
 brew "curl"
 brew "difftastic"
 brew "direnv"
 brew "docutils"
 brew "docuum"
+brew "fd"
 brew "flash"
 brew "freetds"
 brew "fzf"
 brew "gh"
 brew "git"
+brew "git-delta"
+brew "gnu-sed"
 brew "gnupg"
+brew "grep"
 brew "httrack"
 brew "libfido2"
 brew "mas"
 brew "mycli"
-brew "mysql", restart_service: true
+brew "mysql"
 brew "nmap"
 brew "node"
 brew "openapi-generator"
@@ -77,7 +83,6 @@ cask "vlc"
 cask "wireshark"
 cask "xquartz"
 cask "zoom"
-mas "AdGuard for Safari", id: 1440147259
 mas "Amphetamine", id: 937984704
 mas "Bitwarden", id: 1352778147
 mas "Color Picker", id: 1545870783
@@ -90,10 +95,13 @@ mas "Microsoft OneNote", id: 784801555
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Remote Desktop", id: 1295203466
 mas "Microsoft Word", id: 462054704
+mas "Ping", id: 1532271726
 mas "The Unarchiver", id: 425424353
+mas "Tim", id: 1449619230
 mas "UPDF", id: 1619925971
 vscode "alefragnani.bookmarks"
 vscode "amazonwebservices.codewhisperer-for-command-line-companion"
+vscode "andenetalexander.vim-cheatsheet"
 vscode "charliermarsh.ruff"
 vscode "dbaeumer.vscode-eslint"
 vscode "eamodio.gitlens"
@@ -130,6 +138,7 @@ vscode "tonybaloney.vscode-pets"
 vscode "usernamehw.errorlens"
 vscode "visualstudioexptteam.vscodeintellicode"
 vscode "vsciot-vscode.vscode-arduino"
+vscode "vscodevim.vim"
 vscode "wayou.vscode-todo-highlight"
 vscode "wokwi.wokwi-vscode"
 vscode "wyattferguson.jinja2-snippet-kit"
