--- a/config/Brewfile
+++ b/config/Brewfile
@@ -49,7 +49,7 @@ brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 brew "kaplanelad/tap/shellfirm"
-brew "rfidresearchgroup/proxmark3/proxmark3"
+brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-generic"]
 cask "1kc-razer"
 cask "alfred"
 cask "alt-tab"
@@ -63,6 +63,7 @@ cask "docker"
 cask "firefox"
 cask "github"
 cask "google-chrome"
+cask "gstreamer-runtime"
 cask "heynote"
 cask "inkscape"
 cask "iterm2"
@@ -80,8 +81,10 @@ cask "suspicious-package"
 cask "tableplus"
 cask "visual-studio-code"
 cask "vlc"
+cask "wine-stable"
 cask "wireshark"
 cask "xquartz"
+cask "yubico-yubikey-manager"
 cask "zoom"
 mas "Amphetamine", id: 937984704
 mas "Bitwarden", id: 1352778147
