--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,3 +1,4 @@
+tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/services"
 tap "kaplanelad/tap"
@@ -50,6 +51,7 @@ brew "ttyplot"
 brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "hashicorp/tap/terraform"
 brew "kaplanelad/tap/shellfirm"
 brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-generic"]
 cask "1kc-razer"
@@ -105,6 +107,7 @@ mas "The Unarchiver", id: 425424353
 mas "Tim", id: 1449619230
 mas "UPDF", id: 1619925971
 mas "Windows App", id: 1295203466
+mas "Xcode", id: 497799835
 vscode "alefragnani.bookmarks"
 vscode "amazonwebservices.codewhisperer-for-command-line-companion"
 vscode "andenetalexander.vim-cheatsheet"
@@ -118,6 +121,7 @@ vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "github.vscode-pull-request-github"
 vscode "grimmer.vscode-back-forward-button"
+vscode "hashicorp.terraform"
 vscode "ibm.output-colorizer"
 vscode "kamikillerto.vscode-colorize"
 vscode "kevinrose.vsc-python-indent"
@@ -129,7 +133,10 @@ vscode "ms-python.debugpy"
 vscode "ms-python.flake8"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
 vscode "ms-vscode.cpptools"
+vscode "ms-vscode.remote-explorer"
 vscode "ms-vscode.vscode-serial-monitor"
 vscode "ms-vsliveshare.vsliveshare"
 vscode "pkief.material-icon-theme"
