--- a/config/Brewfile
+++ b/config/Brewfile
@@ -45,6 +45,7 @@ brew "pipx"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
+brew "redis"
 brew "thefuck"
 brew "tree"
 brew "ttyplot"
@@ -71,6 +72,7 @@ cask "gstreamer-runtime"
 cask "heynote"
 cask "inkscape"
 cask "iterm2"
+cask "itsycal"
 cask "microsoft-teams"
 cask "monitorcontrol"
 cask "nordvpn"
@@ -146,13 +148,13 @@ vscode "rangav.vscode-thunder-client"
 vscode "redhat.vscode-yaml"
 vscode "ritwickdey.liveserver"
 vscode "samuelcolvin.jinjahtml"
+vscode "shakram02.bash-beautify"
 vscode "supermaven.supermaven"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "tonybaloney.vscode-pets"
 vscode "usernamehw.errorlens"
 vscode "visualstudioexptteam.vscodeintellicode"
-vscode "vsciot-vscode.vscode-arduino"
 vscode "vscodevim.vim"
 vscode "wayou.vscode-todo-highlight"
 vscode "wokwi.wokwi-vscode"
