--- a/config/Brewfile
+++ b/config/Brewfile
@@ -5,7 +5,9 @@ tap "kaplanelad/tap"
 tap "pirj/noclamshell"
 tap "rfidresearchgroup/proxmark3"
 brew "act"
+brew "readline"
 brew "archey4"
+brew "astyle"
 brew "atuin"
 brew "pycparser"
 brew "cffi"
@@ -25,6 +27,7 @@ brew "fd"
 brew "flash"
 brew "freetds"
 brew "fzf"
+brew "gd"
 brew "gh"
 brew "git"
 brew "git-delta"
@@ -32,6 +35,7 @@ brew "gnu-sed"
 brew "gnupg"
 brew "grep"
 brew "httrack"
+brew "jq"
 brew "libfido2"
 brew "mariadb-connector-c"
 brew "mas"
@@ -42,9 +46,12 @@ brew "node"
 brew "openapi-generator"
 brew "php"
 brew "pipx"
+brew "pkg-config"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
+brew "qt@5"
+brew "recode"
 brew "redis"
 brew "thefuck"
 brew "tree"
@@ -54,7 +61,8 @@ brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 brew "hashicorp/tap/terraform"
 brew "kaplanelad/tap/shellfirm"
-brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-generic"]
+brew "rfidresearchgroup/proxmark3/arm-none-eabi-gcc"
+brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-blueshark"]
 cask "1kc-razer"
 cask "alfred"
 cask "alt-tab"
@@ -125,6 +133,7 @@ vscode "github.vscode-pull-request-github"
 vscode "grimmer.vscode-back-forward-button"
 vscode "hashicorp.terraform"
 vscode "ibm.output-colorizer"
+vscode "inferrinizzard.prettier-sql-vscode"
 vscode "kamikillerto.vscode-colorize"
 vscode "kevinrose.vsc-python-indent"
 vscode "mechatroner.rainbow-csv"
