--- a/config/Brewfile
+++ b/config/Brewfile
@@ -21,6 +21,7 @@ brew "coreutils"
 brew "curl"
 brew "difftastic"
 brew "direnv"
+brew "dive"
 brew "docutils"
 brew "docuum"
 brew "fd"
@@ -63,11 +64,11 @@ brew "hashicorp/tap/terraform"
 brew "kaplanelad/tap/shellfirm"
 brew "rfidresearchgroup/proxmark3/arm-none-eabi-gcc"
 brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-blueshark"]
-cask "1kc-razer"
 cask "alfred"
 cask "alt-tab"
 cask "amazon-q"
 cask "android-studio"
+cask "bruno"
 cask "cleanmymac"
 cask "coteditor"
 cask "devutils"
@@ -153,11 +154,9 @@ vscode "ms-vsliveshare.vsliveshare"
 vscode "pkief.material-icon-theme"
 vscode "platformio.platformio-ide"
 vscode "pranaygp.vscode-css-peek"
-vscode "rangav.vscode-thunder-client"
 vscode "redhat.vscode-yaml"
 vscode "ritwickdey.liveserver"
 vscode "samuelcolvin.jinjahtml"
-vscode "shakram02.bash-beautify"
 vscode "supermaven.supermaven"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
