--- a/config/Brewfile
+++ b/config/Brewfile
@@ -23,7 +23,6 @@ brew "difftastic"
 brew "direnv"
 brew "dive"
 brew "docutils"
-brew "docuum"
 brew "fd"
 brew "flash"
 brew "freetds"
@@ -41,19 +40,16 @@ brew "libfido2"
 brew "mariadb-connector-c"
 brew "mas"
 brew "mycli"
-brew "mysql"
 brew "nmap"
 brew "node"
 brew "openapi-generator"
-brew "php"
 brew "pipx"
-brew "pkg-config"
+brew "pkgconf"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
 brew "qt@5"
 brew "recode"
-brew "redis"
 brew "thefuck"
 brew "tree"
 brew "ttyplot"
@@ -68,8 +64,8 @@ cask "alfred"
 cask "alt-tab"
 cask "amazon-q"
 cask "android-studio"
+cask "betterdisplay"
 cask "bruno"
-cask "cleanmymac"
 cask "coteditor"
 cask "devutils"
 cask "discord"
@@ -83,7 +79,6 @@ cask "inkscape"
 cask "iterm2"
 cask "itsycal"
 cask "microsoft-teams"
-cask "monitorcontrol"
 cask "nordvpn"
 cask "obs"
 cask "obsidian"
