--- a/config/Brewfile
+++ b/config/Brewfile
@@ -89,6 +89,7 @@ cask "slack"
 cask "spotify"
 cask "suspicious-package"
 cask "tableplus"
+cask "transnomino"
 cask "visual-studio-code"
 cask "vlc"
 cask "wine-stable"
