--- a/config/Brewfile
+++ b/config/Brewfile
@@ -53,6 +53,7 @@ brew "recode"
 brew "thefuck"
 brew "tree"
 brew "ttyplot"
+brew "uv"
 brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
@@ -73,7 +74,6 @@ cask "docker"
 cask "firefox"
 cask "github"
 cask "google-chrome"
-cask "gstreamer-runtime"
 cask "heynote"
 cask "iterm2"
 cask "itsycal"
@@ -88,6 +88,8 @@ cask "slack"
 cask "spotify"
 cask "suspicious-package"
 cask "tableplus"
+cask "tor-browser"
+cask "transmission"
 cask "transnomino"
 cask "visual-studio-code"
 cask "vlc"
@@ -118,16 +120,12 @@ mas "UPDF", id: 1619925971
 mas "Windows App", id: 1295203466
 mas "Xcode", id: 497799835
 vscode "alefragnani.bookmarks"
-vscode "amazonwebservices.codewhisperer-for-command-line-companion"
-vscode "andenetalexander.vim-cheatsheet"
 vscode "charliermarsh.ruff"
 vscode "dbaeumer.vscode-eslint"
 vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "formulahendry.auto-rename-tag"
 vscode "formulahendry.code-runner"
-vscode "github.copilot"
-vscode "github.copilot-chat"
 vscode "github.vscode-pull-request-github"
 vscode "grimmer.vscode-back-forward-button"
 vscode "hashicorp.terraform"
@@ -158,10 +156,8 @@ vscode "samuelcolvin.jinjahtml"
 vscode "supermaven.supermaven"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
-vscode "tonybaloney.vscode-pets"
 vscode "usernamehw.errorlens"
 vscode "visualstudioexptteam.vscodeintellicode"
-vscode "vscodevim.vim"
 vscode "wayou.vscode-todo-highlight"
 vscode "wokwi.wokwi-vscode"
 vscode "wyattferguson.jinja2-snippet-kit"
