--- a/config/Brewfile
+++ b/config/Brewfile
@@ -36,7 +36,6 @@ brew "grep"
 brew "httrack"
 brew "jq"
 brew "libfido2"
-brew "libgit2@1.7"
 brew "mariadb-connector-c"
 brew "mas"
 brew "mycli"
@@ -55,6 +54,7 @@ brew "tree"
 brew "ttyplot"
 brew "uv"
 brew "wget"
+brew "zsh-autocomplete"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 brew "hashicorp/tap/terraform"
@@ -68,6 +68,7 @@ cask "android-studio"
 cask "betterdisplay"
 cask "bruno"
 cask "coteditor"
+cask "cursor"
 cask "devutils"
 cask "discord"
 cask "docker"
@@ -120,6 +121,8 @@ mas "UPDF", id: 1619925971
 mas "Windows App", id: 1295203466
 mas "Xcode", id: 497799835
 vscode "alefragnani.bookmarks"
+vscode "bradlc.vscode-tailwindcss"
+vscode "burkeholland.simple-react-snippets"
 vscode "charliermarsh.ruff"
 vscode "dbaeumer.vscode-eslint"
 vscode "eamodio.gitlens"
@@ -131,24 +134,21 @@ vscode "grimmer.vscode-back-forward-button"
 vscode "hashicorp.terraform"
 vscode "ibm.output-colorizer"
 vscode "inferrinizzard.prettier-sql-vscode"
-vscode "kamikillerto.vscode-colorize"
 vscode "kevinrose.vsc-python-indent"
+vscode "kisstkondoros.vscode-gutter-preview"
 vscode "mechatroner.rainbow-csv"
 vscode "mhutchie.git-graph"
 vscode "monosans.djlint"
-vscode "ms-azuretools.vscode-docker"
+vscode "mquandalle.graphql"
 vscode "ms-python.debugpy"
 vscode "ms-python.flake8"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
-vscode "ms-vscode-remote.remote-ssh"
-vscode "ms-vscode-remote.remote-ssh-edit"
-vscode "ms-vscode.cpptools"
-vscode "ms-vscode.remote-explorer"
 vscode "ms-vscode.vscode-serial-monitor"
 vscode "ms-vsliveshare.vsliveshare"
+vscode "mushan.vscode-paste-image"
+vscode "naumovs.color-highlight"
 vscode "pkief.material-icon-theme"
-vscode "platformio.platformio-ide"
 vscode "pranaygp.vscode-css-peek"
 vscode "redhat.vscode-yaml"
 vscode "ritwickdey.liveserver"
@@ -157,8 +157,8 @@ vscode "supermaven.supermaven"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "usernamehw.errorlens"
-vscode "visualstudioexptteam.vscodeintellicode"
 vscode "wayou.vscode-todo-highlight"
-vscode "wokwi.wokwi-vscode"
 vscode "wyattferguson.jinja2-snippet-kit"
+vscode "xabikos.javascriptsnippets"
+vscode "yoavbls.pretty-ts-errors"
 vscode "yzhang.markdown-all-in-one"
