--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -72,6 +72,7 @@
   "git.openRepositoryInParentFolders": "never",
   "git.ignoreRebaseWarning": true,
   "git.enableSmartCommit": true,
+  "git.branchProtection": ["main"], // DON'T PUSH TO MAIN
 
   // GitLens
   "gitlens.advanced.messages": {
