--- a/config/Brewfile
+++ b/config/Brewfile
@@ -4,70 +4,42 @@ tap "homebrew/services"
 tap "kaplanelad/tap"
 tap "pirj/noclamshell"
 tap "rfidresearchgroup/proxmark3"
-brew "act"
-brew "readline"
-brew "archey4"
-brew "astyle"
 brew "atuin"
 brew "pycparser"
 brew "cffi"
 brew "cryptography"
+brew "readline"
 brew "awscli"
 brew "bat"
-brew "click"
-brew "cmake"
 brew "coreutils"
 brew "curl"
 brew "difftastic"
 brew "direnv"
-brew "dive"
-brew "docutils"
-brew "fd"
-brew "flash"
-brew "freetds"
-brew "fzf"
-brew "gd"
 brew "gh"
 brew "git"
 brew "git-delta"
 brew "gnu-sed"
 brew "gnupg"
 brew "grep"
-brew "httrack"
 brew "jq"
-brew "libfido2"
-brew "mariadb-connector-c"
 brew "mas"
 brew "mycli"
-brew "nmap"
-brew "node"
-brew "openapi-generator"
 brew "pipx"
 brew "pkgconf"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
-brew "qt@5"
-brew "recode"
 brew "thefuck"
 brew "tree"
-brew "ttyplot"
-brew "uv"
 brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 brew "hashicorp/tap/terraform"
-brew "kaplanelad/tap/shellfirm"
-brew "rfidresearchgroup/proxmark3/arm-none-eabi-gcc"
-brew "rfidresearchgroup/proxmark3/proxmark3", args: ["with-blueshark"]
 cask "alfred"
 cask "alt-tab"
-cask "amazon-q"
-cask "android-studio"
 cask "betterdisplay"
 cask "bruno"
 cask "coteditor"
-cask "cursor"
 cask "devutils"
 cask "discord"
 cask "docker"
@@ -75,6 +47,7 @@ cask "firefox"
 cask "github"
 cask "google-chrome"
 cask "heynote"
+cask "istat-menus"
 cask "iterm2"
 cask "itsycal"
 cask "microsoft-teams"
@@ -83,17 +56,15 @@ cask "obs"
 cask "obsidian"
 cask "qflipper"
 cask "scroll-reverser"
+cask "session-manager-plugin"
 cask "shottr"
 cask "slack"
 cask "spotify"
 cask "suspicious-package"
 cask "tableplus"
-cask "tor-browser"
-cask "transmission"
 cask "transnomino"
 cask "visual-studio-code"
 cask "vlc"
-cask "wine-stable"
 cask "wireshark"
 cask "xquartz"
 cask "yubico-yubikey-manager"
@@ -101,13 +72,9 @@ cask "zoom"
 mas "Affinity Designer 2", id: 1616831348
 mas "Affinity Photo 2", id: 1616822987
 mas "Affinity Publisher 2", id: 1606941598
-mas "Amphetamine", id: 937984704
 mas "Bitwarden", id: 1352778147
-mas "Chameleon Ultra GUI", id: 6462919364
 mas "Color Picker", id: 1545870783
-mas "CopyClip", id: 595191960
 mas "iMovie", id: 408981434
-mas "iStat Menus", id: 1319778037
 mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
 mas "Microsoft OneNote", id: 784801555
@@ -117,7 +84,6 @@ mas "Ping", id: 1532271726
 mas "The Unarchiver", id: 425424353
 mas "Tim", id: 1449619230
 mas "UPDF", id: 1619925971
-mas "Windows App", id: 1295203466
 mas "Xcode", id: 497799835
 vscode "alefragnani.bookmarks"
 vscode "bradlc.vscode-tailwindcss"
