--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,9 +1,5 @@
-tap "hashicorp/tap"
-tap "homebrew/bundle"
-tap "homebrew/services"
 tap "kaplanelad/tap"
 tap "pirj/noclamshell"
-tap "rfidresearchgroup/proxmark3"
 brew "atuin"
 brew "pycparser"
 brew "cffi"
@@ -34,7 +30,6 @@ brew "tree"
 brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
-brew "hashicorp/tap/terraform"
 cask "alfred"
 cask "alt-tab"
 cask "betterdisplay"
@@ -46,6 +41,7 @@ cask "docker"
 cask "firefox"
 cask "github"
 cask "google-chrome"
+cask "handbrake"
 cask "heynote"
 cask "istat-menus"
 cask "iterm2"
@@ -62,6 +58,7 @@ cask "slack"
 cask "spotify"
 cask "suspicious-package"
 cask "tableplus"
+cask "transmission"
 cask "transnomino"
 cask "visual-studio-code"
 cask "vlc"
@@ -103,6 +100,7 @@ vscode "kevinrose.vsc-python-indent"
 vscode "kisstkondoros.vscode-gutter-preview"
 vscode "mechatroner.rainbow-csv"
 vscode "mhutchie.git-graph"
+vscode "mjmlio.vscode-mjml"
 vscode "monosans.djlint"
 vscode "mquandalle.graphql"
 vscode "ms-python.debugpy"
