--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,13 +1,13 @@
 tap "kaplanelad/tap"
 tap "pirj/noclamshell"
 brew "atuin"
-brew "pycparser"
-brew "cffi"
-brew "cryptography"
 brew "readline"
 brew "awscli"
 brew "bat"
+brew "pycparser"
+brew "cffi"
 brew "coreutils"
+brew "cryptography"
 brew "curl"
 brew "difftastic"
 brew "direnv"
@@ -25,8 +25,11 @@ brew "pkgconf"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.11"
+brew "redis"
 brew "thefuck"
+brew "tlrc"
 brew "tree"
+brew "trippy"
 brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
@@ -37,11 +40,11 @@ cask "bruno"
 cask "coteditor"
 cask "devutils"
 cask "discord"
-cask "docker"
+cask "docker-desktop"
 cask "firefox"
 cask "github"
 cask "google-chrome"
-cask "handbrake"
+cask "handbrake-app"
 cask "heynote"
 cask "istat-menus"
 cask "iterm2"
@@ -51,7 +54,6 @@ cask "nordvpn"
 cask "obs"
 cask "obsidian"
 cask "qflipper"
-cask "scroll-reverser"
 cask "session-manager-plugin"
 cask "shottr"
 cask "slack"
@@ -62,9 +64,9 @@ cask "transmission"
 cask "transnomino"
 cask "visual-studio-code"
 cask "vlc"
-cask "wireshark"
+cask "wireshark-app"
 cask "xquartz"
-cask "yubico-yubikey-manager"
+cask "yubico-authenticator"
 cask "zoom"
 mas "Affinity Designer 2", id: 1616831348
 mas "Affinity Photo 2", id: 1616822987
@@ -91,6 +93,8 @@ vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "formulahendry.auto-rename-tag"
 vscode "formulahendry.code-runner"
+vscode "github.copilot"
+vscode "github.copilot-chat"
 vscode "github.vscode-pull-request-github"
 vscode "grimmer.vscode-back-forward-button"
 vscode "hashicorp.terraform"
@@ -107,6 +111,7 @@ vscode "ms-python.debugpy"
 vscode "ms-python.flake8"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
 vscode "ms-vscode.vscode-serial-monitor"
 vscode "ms-vsliveshare.vsliveshare"
 vscode "mushan.vscode-paste-image"
@@ -116,7 +121,6 @@ vscode "pranaygp.vscode-css-peek"
 vscode "redhat.vscode-yaml"
 vscode "ritwickdey.liveserver"
 vscode "samuelcolvin.jinjahtml"
-vscode "supermaven.supermaven"
 vscode "tamasfe.even-better-toml"
 vscode "tomoki1207.pdf"
 vscode "usernamehw.errorlens"
