--- a/config/Brewfile
+++ b/config/Brewfile
@@ -8,6 +8,7 @@ brew "pycparser"
 brew "cffi"
 brew "coreutils"
 brew "cryptography"
+brew "zstd"
 brew "curl"
 brew "difftastic"
 brew "direnv"
@@ -20,6 +21,7 @@ brew "grep"
 brew "jq"
 brew "mas"
 brew "mycli"
+brew "payload-dumper-go"
 brew "pipx"
 brew "pkgconf"
 brew "pyenv"
@@ -35,6 +37,7 @@ brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 cask "alfred"
 cask "alt-tab"
+cask "android-platform-tools"
 cask "betterdisplay"
 cask "bruno"
 cask "coteditor"
@@ -46,6 +49,7 @@ cask "github"
 cask "google-chrome"
 cask "handbrake-app"
 cask "heynote"
+cask "httpie-desktop"
 cask "istat-menus"
 cask "iterm2"
 cask "itsycal"
