--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,5 +1,6 @@
 tap "kaplanelad/tap"
 tap "pirj/noclamshell"
+tap "rossmacarthur/tap"
 brew "atuin"
 brew "readline"
 brew "awscli"
@@ -43,7 +44,6 @@ cask "bruno"
 cask "coteditor"
 cask "devutils"
 cask "discord"
-cask "docker-desktop"
 cask "firefox"
 cask "github"
 cask "google-chrome"
