--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -207,5 +207,7 @@
   },
   "githubIssues.createIssueTriggers": [],
   "workbench.layoutControl.enabled": false,
-  "window.commandCenter": false
+  "window.commandCenter": false,
+  "gitlens.ai.model": "vscode",
+  "gitlens.ai.vscode.model": "copilot:gpt-4.1"
 }
