--- a/config/Brewfile
+++ b/config/Brewfile
@@ -53,6 +53,7 @@ cask "httpie-desktop"
 cask "istat-menus"
 cask "iterm2"
 cask "itsycal"
+cask "logi-options+"
 cask "microsoft-teams"
 cask "nordvpn"
 cask "obs"
